Fixed car card layout issue

--- a/src/components/cars/car-card/car-card.scss
+++ b/src/components/cars/car-card/car-card.scss
@@ -1,7 +1,7 @@
 #car-cont {
     display: grid;
     grid-auto-flow: row;
-    grid-template-columns: 1fr 1fr min-content;
+    grid-template-columns: 1fr 1fr 128px;
     width: 100%;
     align-items: center;
     column-gap: 10px;
